CREATE TABLE IF NOT EXISTS partner_profiles (
  user_id BIGINT UNSIGNED NOT NULL,
  slug VARCHAR(191) NOT NULL,
  brand_name VARCHAR(100) NOT NULL,
  description TEXT NOT NULL,
  specializations_json TEXT NOT NULL,
  address TEXT NOT NULL,
  whatsapp VARCHAR(30) NOT NULL,
  latitude DECIMAL(10,8) NULL,
  longitude DECIMAL(11,8) NULL,
  free_distance_km DECIMAL(8,2) NOT NULL DEFAULT 5.00,
  flat_transport_fee INT UNSIGNED NOT NULL DEFAULT 0,
  transport_fee_per_km BIGINT UNSIGNED NOT NULL DEFAULT 3000,
  partner_type ENUM('individual', 'studio') NOT NULL DEFAULT 'individual',
  team_quota INT UNSIGNED NOT NULL DEFAULT 1,
  instagram VARCHAR(191) NOT NULL DEFAULT '',
  tiktok VARCHAR(191) NOT NULL DEFAULT '',
  facebook VARCHAR(191) NOT NULL DEFAULT '',
  website VARCHAR(191) NOT NULL DEFAULT '',
  profile_photo_url VARCHAR(255) NOT NULL DEFAULT '',
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  PRIMARY KEY (user_id),
  UNIQUE KEY partner_profiles_slug_unique (slug)
);

CREATE TABLE IF NOT EXISTS partner_gallery_items (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT,
  user_id BIGINT UNSIGNED NOT NULL,
  title VARCHAR(100) NOT NULL,
  category VARCHAR(100) NOT NULL,
  image_url VARCHAR(255) NOT NULL,
  ownership_declared TINYINT(1) NOT NULL DEFAULT 0,
  subject_consent_declared TINYINT(1) NOT NULL DEFAULT 0,
  publication_consent_declared TINYINT(1) NOT NULL DEFAULT 0,
  responsibility_accepted TINYINT(1) NOT NULL DEFAULT 0,
  declaration_accepted_at DATETIME NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  PRIMARY KEY (id),
  KEY partner_gallery_items_user_id_idx (user_id)
);

CREATE TABLE IF NOT EXISTS partner_categories (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT,
  user_id BIGINT UNSIGNED NOT NULL,
  name VARCHAR(50) NOT NULL,
  slug VARCHAR(80) NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  PRIMARY KEY (id),
  UNIQUE KEY partner_categories_user_slug_unique (user_id, slug),
  KEY partner_categories_user_id_idx (user_id)
);

CREATE TABLE IF NOT EXISTS partner_packages (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT,
  user_id BIGINT UNSIGNED NOT NULL,
  category_id BIGINT UNSIGNED NULL,
  name VARCHAR(100) NOT NULL,
  duration VARCHAR(100) NOT NULL,
  price BIGINT UNSIGNED NOT NULL,
  description TEXT NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  PRIMARY KEY (id),
  KEY partner_packages_user_id_idx (user_id),
  KEY partner_packages_category_id_idx (category_id)
);

CREATE TABLE IF NOT EXISTS partner_applications (
  id BIGINT UNSIGNED NOT NULL AUTO_INCREMENT,
  applicant_name VARCHAR(100) NOT NULL,
  applicant_email VARCHAR(191) NOT NULL,
  applicant_phone VARCHAR(30) NOT NULL,
  partner_type ENUM('individual', 'studio') NOT NULL DEFAULT 'individual',
  location VARCHAR(100) NOT NULL,
  domicile_city VARCHAR(100) NOT NULL,
  address TEXT NULL,
  brand_name VARCHAR(100) NOT NULL DEFAULT '',
  category VARCHAR(100) NOT NULL,
  specializations_json TEXT NULL,
  experience VARCHAR(100) NOT NULL,
  instagram_url VARCHAR(255) NOT NULL DEFAULT '',
  portfolio_link VARCHAR(255) NOT NULL,
  about_you TEXT NOT NULL,
  maps_url VARCHAR(255) NULL,
  website_url VARCHAR(255) NULL,
  established_year SMALLINT UNSIGNED NULL,
  studio_phone VARCHAR(30) NULL,
  declaration_items_json TEXT NULL,
  declaration_accepted TINYINT(1) NOT NULL DEFAULT 0,
  declaration_accepted_at DATETIME NULL,
  terms_accepted TINYINT(1) NOT NULL DEFAULT 0,
  terms_version VARCHAR(20) NULL,
  terms_accepted_at DATETIME NULL,
  bank_name VARCHAR(100) NOT NULL DEFAULT '',
  bank_account_number VARCHAR(30) NOT NULL DEFAULT '',
  cv_file_url VARCHAR(255) NOT NULL DEFAULT '',
  status ENUM('pending', 'approved', 'rejected') NOT NULL DEFAULT 'pending',
  rejection_reason TEXT NULL,
  reviewed_at DATETIME NULL,
  reviewed_by_user_id BIGINT UNSIGNED NULL,
  submitted_by_user_id BIGINT UNSIGNED NOT NULL,
  created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP,
  PRIMARY KEY (id),
  KEY partner_applications_partner_type_idx (partner_type),
  KEY partner_applications_status_idx (status),
  KEY partner_applications_reviewed_by_user_id_idx (reviewed_by_user_id),
  KEY partner_applications_user_id_idx (submitted_by_user_id)
);
